--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,36 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Empresa dedicada a brindar servicios para la construccion de paginas web desde hace mas de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ambito del diseño web y posicionamento SEO.
-    Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen unicos frente a la competencia. "/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>airhitect</title>
+    <meta name="description" content="Empresa dedicada a brindar servicios para la construcción de páginas web desde hace más de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ámbito del diseño web y posicionamiento SEO.
+    Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen únicos frente a la competencia."/>
+    <meta name="keywords" content="diseño web, SEO, web designer,AIRhitect, servicios">
     <meta name=”autor” content=”AIRhitect” />
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="AIRhitect">
+    <meta itemprop="description" content="Empresa dedicada a brindar servicios para la construcción de páginas web desde hace más de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ámbito del diseño web y posicionamiento SEO.
+        Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen únicos frente a la competencia.">
+    <meta itemprop="image" content="../src/assets/images/fondoSeo.webp">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://julian-carelli.github.io/Landing-Page">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="AIRhitect">
+    <meta property="og:description" content="Empresa dedicada a brindar servicios para la construcción de páginas web desde hace más de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ámbito del diseño web y posicionamiento SEO.
+        Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen únicos frente a la competencia.">
+    <meta property="og:image" content="../src/assets/images/fondoSeo.webp">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="AIRhitect">
+    <meta name="twitter:description" content="Empresa dedicada a brindar servicios para la construcción de páginas web desde hace más de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ámbito del diseño web y posicionamiento SEO.
+        Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen únicos frente a la competencia.">
+    <meta name="twitter:image" content="../src/assets/images/fondoSeo.webp">
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>AIRhitect</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
