Add new changes and finish my test

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta itemprop="name" content="AIRhitect">
     <meta itemprop="description" content="Empresa dedicada a brindar servicios para la construcción de páginas web desde hace más de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ámbito del diseño web y posicionamiento SEO.
         Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen únicos frente a la competencia.">
-    <meta itemprop="image" content="../src/assets/images/fondoSeo.webp">
+    <meta itemprop="image" content="https://i.ibb.co/6n3005M/fondoSeo.webp">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://julian-carelli.github.io/Landing-Page">
@@ -22,14 +22,14 @@
     <meta property="og:title" content="AIRhitect">
     <meta property="og:description" content="Empresa dedicada a brindar servicios para la construcción de páginas web desde hace más de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ámbito del diseño web y posicionamiento SEO.
         Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen únicos frente a la competencia.">
-    <meta property="og:image" content="../src/assets/images/fondoSeo.webp">
+    <meta property="og:image" content="https://i.ibb.co/6n3005M/fondoSeo.webp">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="AIRhitect">
     <meta name="twitter:description" content="Empresa dedicada a brindar servicios para la construcción de páginas web desde hace más de 5 años, lideres en el mercado con una amplia cantidad de experiencia en el ámbito del diseño web y posicionamiento SEO.
         Contamos con un equipo capacitado y con gran experiencia en brindar servicios de calidad al cliente, con herramientas y formas de trabajo que nos hacen únicos frente a la competencia.">
-    <meta name="twitter:image" content="../src/assets/images/fondoSeo.webp">
+    <meta name="twitter:image" content="https://i.ibb.co/6n3005M/fondoSeo.webp">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
